tests/NormalTests/paczka1/fuzzy1/15189989.err
Error in line 2: 9onGo S632 65,9
Error in line 4: 9onGo S249 3,4
